--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.16.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
