--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=http://localhost:4000/api/cafeteria/
+REACT_APP_API_URL=https://cafeteria5achoquevilca.herokuapp.com/api/cafeteria
